turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: unclosed character literal
  initLangton('RLLLLRL')
                      ^Turmite:47: error: ')' expected but something found.
  initLangton('RLLLLRL')
                      ^Turmite:51: error: ';' expected but 'def' found.
	override def run() {
                 ^